--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "react-dom": "^16.5.2",
     "react-scripts": "0.9.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
